fixed spacing bug on article list

--- a/public/stylesheets/lists.css
+++ b/public/stylesheets/lists.css
@@ -7,8 +7,8 @@
   }
 
 .rank {
-  height: 75px;
+  height: 26px;
   width: 30px;
   float: left;
-  padding-top: 25px;
+  padding-top: 8px;
 }
